[gd_scene load_steps=48 format=3 uid="uid://cooya7qepto88"]

[ext_resource type="Texture2D" uid="uid://buswkqk6ihkww" path="res://assets/pombero/Pomberito_Iddle.png" id="1_bfq12"]
[ext_resource type="Script" path="res://scripts/pombero.gd" id="1_xmyqa"]
[ext_resource type="Texture2D" uid="uid://cgg63bjn2tlp8" path="res://assets/pombero/Pomberito_Walk.png" id="2_vy70s"]
[ext_resource type="Texture2D" uid="uid://ckln1568op8hv" path="res://assets/pombero/Pomberito_Attack.png" id="3_a5x5s"]
[ext_resource type="Texture2D" uid="uid://d2xy6jqu0rha2" path="res://assets/pombero/Pomberito_Hit.png" id="4_0kb4b"]
[ext_resource type="Texture2D" uid="uid://cqw3hnaxbgnjx" path="res://assets/pombero/Pomberito_Death.png" id="5_vcd4x"]
[ext_resource type="Script" path="res://scripts/PomberoStateMachine.gd" id="6_quy1x"]
[ext_resource type="Script" path="res://scripts/PomberoIdleState.gd" id="7_huccy"]
[ext_resource type="Script" path="res://scripts/PomberoChaseState.gd" id="8_56omh"]
[ext_resource type="Script" path="res://scripts/PomberoAttackState.gd" id="9_gsbpe"]
[ext_resource type="Script" path="res://scripts/PomberoHurtState.gd" id="10_4qkk8"]
[ext_resource type="Script" path="res://scripts/PomberoDeadState.gd" id="11_qqrhr"]
[ext_resource type="Script" path="res://scripts/EnemyHurtBox.gd" id="13_tqduh"]
[ext_resource type="AudioStream" uid="uid://dn68ajjpcg5qn" path="res://Musica/sfx/Pomberosfx.mp3" id="14_1hdo8"]

[sub_resource type="Animation" id="Animation_k51uv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_bfq12")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mdxbj"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_a5x5s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PomberoStateMachine/PomberoAttackState")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_jr18x"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_vcd4x")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_wn6x6"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_0kb4b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_rv2t5"]
resource_name = "idle"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_bfq12")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_b6q0o"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vy70s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x7b7c"]
_data = {
"RESET": SubResource("Animation_k51uv"),
"attack": SubResource("Animation_mdxbj"),
"death": SubResource("Animation_jr18x"),
"hit": SubResource("Animation_wn6x6"),
"idle": SubResource("Animation_rv2t5"),
"walk": SubResource("Animation_b6q0o")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bfurv"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k8ryp"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ljpfo"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ch6ts"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6vbvm"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g8asl"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a6c8k"]
switch_mode = 2
advance_mode = 2
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_185w4"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1rdt3"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_saqm6"]
advance_mode = 2
advance_condition = &"is_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oixbj"]
advance_mode = 2
advance_condition = &"is_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i73yw"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7wopu"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lhs73"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gf4sy"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0ng4i"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wgcvo"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nn2de"]
advance_mode = 2
advance_condition = &"is_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3il74"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mb1pj"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1y33q"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_biekm"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_k2773"]
states/Start/position = Vector2(38, 100)
states/attack/node = SubResource("AnimationNodeAnimation_bfurv")
states/attack/position = Vector2(314, 95)
states/death/node = SubResource("AnimationNodeAnimation_k8ryp")
states/death/position = Vector2(381, 232)
states/hit/node = SubResource("AnimationNodeAnimation_ljpfo")
states/hit/position = Vector2(47, 241)
states/idle/node = SubResource("AnimationNodeAnimation_ch6ts")
states/idle/position = Vector2(133, 100)
states/walk/node = SubResource("AnimationNodeAnimation_6vbvm")
states/walk/position = Vector2(133, 363)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_g8asl"), "death", "End", SubResource("AnimationNodeStateMachineTransition_a6c8k"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_185w4"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_1rdt3"), "idle", "hit", SubResource("AnimationNodeStateMachineTransition_saqm6"), "walk", "hit", SubResource("AnimationNodeStateMachineTransition_oixbj"), "hit", "idle", SubResource("AnimationNodeStateMachineTransition_i73yw"), "hit", "walk", SubResource("AnimationNodeStateMachineTransition_7wopu"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_lhs73"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_gf4sy"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_0ng4i"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_wgcvo"), "attack", "hit", SubResource("AnimationNodeStateMachineTransition_nn2de"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_3il74"), "walk", "death", SubResource("AnimationNodeStateMachineTransition_mb1pj"), "hit", "death", SubResource("AnimationNodeStateMachineTransition_1y33q"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_biekm")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sb5y6"]
radius = 20.0
height = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxc1k"]
size = Vector2(48, 17.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_3anm1"]
radius = 262.002

[node name="Pombero" type="CharacterBody2D"]
script = ExtResource("1_xmyqa")
health = 10.0
enemy_damage = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bfq12")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x7b7c")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_k2773")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/idle = false
parameters/conditions/is_dead = false
parameters/conditions/is_hit = false
parameters/conditions/is_moving = false
parameters/conditions/stop = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-7, 30, -20, 1, -15, -11, 0, -16, 18, 0, 23, 29, 22, 31, -6, 31)

[node name="PomberoStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "anim_tree")]
script = ExtResource("6_quy1x")
character = NodePath("..")
current_state = NodePath("PomberoIdleState")
anim_tree = NodePath("../AnimationTree")

[node name="PomberoIdleState" type="Node" parent="PomberoStateMachine"]
script = ExtResource("7_huccy")

[node name="PomberoChaseState" type="Node" parent="PomberoStateMachine"]
script = ExtResource("8_56omh")
move_speed = 50.0

[node name="PomberoAttackState" type="Node" parent="PomberoStateMachine"]
script = ExtResource("9_gsbpe")

[node name="BufferTimer" type="Timer" parent="PomberoStateMachine/PomberoAttackState"]
one_shot = true

[node name="PomberoHurtState" type="Node" parent="PomberoStateMachine" node_paths=PackedStringArray("chase_state")]
script = ExtResource("10_4qkk8")
chase_state = NodePath("../PomberoChaseState")

[node name="PomberoDeadState" type="Node" parent="PomberoStateMachine"]
script = ExtResource("11_qqrhr")

[node name="EnemyHurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("13_tqduh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBox"]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_sb5y6")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(0, 3.25)
shape = SubResource("RectangleShape2D_cxc1k")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_3anm1")

[node name="Pomberosfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_1hdo8")

[connection signal="dead" from="." to="PomberoStateMachine/PomberoDeadState" method="_on_pombero_dead"]
[connection signal="animation_finished" from="AnimationTree" to="PomberoStateMachine/PomberoHurtState" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="PomberoStateMachine/PomberoAttackState/BufferTimer" to="PomberoStateMachine/PomberoAttackState" method="_on_buffer_timer_timeout"]
[connection signal="body_entered" from="AttackRange" to="PomberoStateMachine/PomberoAttackState" method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="PomberoStateMachine/PomberoAttackState" method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="PlayerDetection" to="PomberoStateMachine/PomberoIdleState" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="PomberoStateMachine/PomberoChaseState" method="_on_player_detection_body_exited"]
